# RoseSwitch

./: .gitignore  LICENSE  README.md  README_zh.md
rose_switch/: Cargo.toml  config.toml
rose_switch/src/: config.rs  input_method.rs  main.rs  switch.rs  window_focus.rs
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/src/x11/: input_method.rs  switch.rs
