[package]
name = "rose_switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
x11rb-async = { version = "0.13.0",features = ["all-extensions"] }
log = "0.4.21"
simple_logger = "4.3.3"
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
tokio = { version = "1.36.0", features = ["full"] }