[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1" }

[dependencies]
serde_json = "1.0"
tauri = { version = "1.6.0" }
dbus = "0.9.7"
x11rb-async = { version = "0.13.0",features = ["all-extensions"] }
log = "0.4.21"
simple_logger = "4.3.3"
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
tokio = { version = "1.36.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
